[package]
name = "crush-lang-python"
version.workspace = true
edition = "2024"
description = "Python language support for Crush — parser + CAST lowering backed by rustpython-parser"
readme = "../../README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "python_walker"
path = "src/bin/walker.rs"

[dependencies]
crush-cast.workspace = true
crush-walker-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustpython-parser = "0.4"
rustpython-ast = "0.4"

[dev-dependencies]
crush-frontend = { path = "../crush-frontend", version = "0.3.0" }
crush-lang-sdk = { path = "../crush-lang-sdk", version = "0.3.0" }
crush-vm = { path = "../crush-vm", version = "0.3.0" }
