[package]
name = "crush-lang-sdk"
version.workspace = true
edition = "2024"
description = "Rust SDK for hosting and extending the crush-vm CVM1 runtime"
license.workspace = true
repository = "https://github.com/nixpt/crush-ast"
homepage.workspace = true
readme = "README.md"
keywords = ["crush", "sdk", "vm", "scripting", "embedding"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "crush-run"
path = "src/bin/crush-run.rs"

[[bin]]
name = "crush-compile"
path = "src/bin/crush-compile.rs"

[[bin]]
name = "crush-repl"
path = "src/bin/crush-repl.rs"

[[bin]]
name = "crushc"
path = "src/bin/crushc.rs"

[features]
default = []
net = ["dep:ureq"]
db = ["dep:rusqlite"]
graphics = []
stdlib = ["dep:regex"]
repl-helper = ["dep:rustyline"]

[dependencies]
crush-vm.workspace = true
chrono.workspace = true
crush-cast.workspace = true
casm.workspace = true
crush-frontend.workspace = true
crush-lang-python = { path = "../crush-lang-python", version = "0.3.0" }
crush-errors.workspace = true
crush-index.workspace = true
crush-cson.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2 = { version = "0.10", default-features = false, features = ["std"] }
base64 = "0.22"
rand = { version = "0.8", features = ["std", "std_rng"] }
clap.workspace = true
ureq = { version = "2", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
regex = { version = "1.10", optional = true }
rustyline = { version = "10.0", optional = true }
yansi.workspace = true

# wasm32 has no OS RNG; `rand`'s getrandom-0.2 backend needs the `js` source.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
crush-cast = { workspace = true }
crush-frontend = { workspace = true }
crush-index = { workspace = true }
tempfile = "3"
