[package]
name = "crush-lang-sona"
version = "0.2.0"
edition = "2024"
description = "Sona language support for Crush — a highly optimized parallel scripting language targeting the FastVM path"
license.workspace = true
repository.workspace = true

[lib]
name = "crush_lang_sona"

[dependencies]
crush-cast = { workspace = true }
casm = { workspace = true }
walker-core = { workspace = true }
crush-vm = { path = "../crush-vm" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
